<resources>
    <string name="app_name">AgroVision</string>
    <string name="result">Detection\'s result</string>
    <string name="deskripsi_result">Deskripsi hasil</string>
    <string name="resultDesc">Result description</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification">Push Notification</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="home_page">Welcome to our\nhomepage! Choose\nyour destination...</string>
    <string name="button_result">Back to homepage</string>
    <string name="title_news">Title</string>
    <string name="url">url</string>
    <string name="bookmark">Result</string>
    <string name="desc_result">Deskripsi</string>
    <string name="none">Search not found</string>
    <string name="username">Park Sunghoon</string>
    <string name="post_time">1 hour ago</string>
    <string name="image_camera">Image camera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="home">My Agro</string>
    <string name="Timeline">Timeline</string>
    <string name="setting">Settings\n</string>
    <string name="login">  Login</string>
    <string name="signup">Sign Up</string>
    <string name="guest">Guest</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu</string>
    <string name="Upload">Analyze</string>
    <string name="fab_login">Login via Floating Action Button</string>
    <string name="fab_signup">Sign Up via Floating Action Button</string>
    <string name="fab_guest">Guest Login via Floating Action Button</string>
    <string name="guest_signup">1</string>
    <string name="guest_login">Guest</string>
    <string name="default_result_description">default result description</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="username_label">Username</string>
    <string name="news">Discover the latest\ninsights.</string>
    <string name="bookmark_label">Your saved analyzes.</string>

</resources>