<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LandingPageActivity">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/page1" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="411dp"
        android:contentDescription="@string/fab_login"
        android:src="@drawable/baseline_arrow_circle_right_24"
        app:backgroundTint="@color/white"
        app:elevation="6dp"
        app:maxImageSize="48dp"
        app:rippleColor="@color/hijau"
        app:tint="#2F4C0C" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fabSignUp"
        android:layout_alignStart="@id/fabLogin"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-141dp"
        android:backgroundTint="@color/hijau"
        android:elevation="4dp"
        android:paddingStart="60dp"
        android:paddingTop="16dp"
        android:paddingEnd="36dp"
        android:paddingBottom="12dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fabSignUp"
        android:layout_alignStart="@id/fabLogin"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="-59dp"
        android:backgroundTint="@color/hijau"
        android:elevation="4dp"
        android:paddingStart="60dp"
        android:paddingTop="17dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fabLogin"
        android:layout_alignStart="@id/fabLogin"
        android:layout_marginStart="3dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/hijau"
        android:elevation="4dp"
        android:paddingStart="60dp"
        android:paddingTop="17dp"
        android:paddingEnd="39dp"
        android:paddingBottom="12dp"
        android:text="@string/guest_login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="493dp"
        android:contentDescription="@string/fab_signup"
        android:src="@drawable/baseline_arrow_circle_right_24"
        app:backgroundTint="@color/white"
        app:elevation="6dp"
        app:maxImageSize="48dp"
        app:rippleColor="@color/hijau"
        app:tint="#2F4C0C" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="574dp"
        android:contentDescription="@string/fab_guest"
        android:src="@drawable/baseline_arrow_circle_right_24"
        app:backgroundTint="@color/white"
        app:elevation="6dp"
        app:maxImageSize="48dp"
        app:rippleColor="@color/hijau"
        app:tint="#2F4C0C" />

</RelativeLayout>
